--- a/templates/home.html
+++ b/templates/home.html
@@ -17,6 +17,7 @@
         }
 
         .navbar-text {
+            text-decoration: none;
             font-weight: bold;
             font-family: Hack;
         }
@@ -75,33 +76,50 @@
             text-align: center;
         }
 
+        .logout {
+            text-decoration: none;
+        }
+
+        .logout:hover {
+            color: orange;
+        }
+
+        .task_created {
+            color: orange;
+            font-weight: bold;
+            font-size: 15px;
+            font-family: Hack;
+        }
+
+
     
     </style>
 </head>
 <body>
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <h1><a class="navbar-brand">Todo App in <span class="django">Django</span></a></h1>
-                <span class="navbar-text">
-                  {{request.user.username}}
-                  <a href="{% url 'logout' %}">Logout</a>
-                </span>
-              </div>
-            </div>
-          </nav>
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Todo App in <span class="django">Django</span></a>
+            <span class="navbar-text">
+              {{request.user.username}}
+              <a href="{% url 'logout' %}" class="logout">Logout</a>
+            </span>
+          </div>
+        </div>
+      </nav>
   
       <div class="container-fluid">
         <h1 class="welcome-heading">"Remembering made easy."</h1>
 
-        <div class="form">
-            <form action="add_task" method="post">
-                {% csrf_token %}
-                <label for="task" class="task_label">I want to </label><input type="text" name="task" id="task" class="task_input" placeholder="Play Chess" required>
-                <input type="submit" value="add task" class="add_task_button">
-            </form>
+        <div class="container-fluid">
+            <div class="form">
+                <form action="add_task" method="post">
+                    {% csrf_token %}
+                    <label for="task" class="task_label">I want to </label><input type="text" name="task" id="task" class="task_input" placeholder="Play Chess" maxlength="30" required>
+                    <input type="submit" value="add task" class="add_task_button">
+                </form>
+            </div>
         </div>
+       
       </div>
 
       <div class="container-fluid">
@@ -111,7 +129,7 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">{{task.task}}</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h6 class="task_created">{{task.task_created}}</h6>
                   <form action="delete_task/{{task.id}}" method="post">
                     {% csrf_token %}
                     <input type="submit" value="delete task" class="btn btn-outline-danger">
